--- a/final_project/style.css
+++ b/final_project/style.css
@@ -4,6 +4,7 @@ body {
   background-color: rgb(170, 210, 255);
   border-color: #9dacf0;
   border-style: solid;
+  font-family: "new-zen", sans-serif;
   }
   
   ul {
